--- a/templates/list_view.html
+++ b/templates/list_view.html
@@ -4,8 +4,7 @@
 <div class="my-4 p-3 rounded bg-light shadow-sm">
     <h1 class="border-bottom border-gray pb-2">{{list.title}}</h1>
     <h6 class="border-bottom border-gray pb-3 my-3">Add Item</h6>
-
-    <form method="post" class="d-flex" action={{url_for('list_view', items_list=list.id)}}>
+    <form method="post" class="d-flex" action={{url_for('list_update', item=list.id)}}>
         <div class="form-group w-100 pt-3">
             <input type="text" name="list_item" class="form-control" required>
         </div>
@@ -23,9 +22,18 @@
     {% for item in list.items %}
         <div class="media text-muted pt-3">
             <div class="media-body pb-3 mb-0 small lh-125 border-bottom border-gray">
-                <h5 class="d-block text-gray-dark">{{item.name}}</h5>
+                {% if session['item-editmode'] and session['item-editmode'] is false %}
+                <h5 class="d-block textgray-dark">{{item.name}}</h5>
                 <a class="btn btn-secondary btn-sm" href={{url_for('handle_crud_list', func='edit-item', item=item.id )}}>Edit</a>
                 <a class="btn btn-danger btn-sm" href={{url_for('handle_crud_list', func='item-del', item=item.id )}}>Delete Item</a>
+                {% else %}
+                <!-- <form method="post" class="d-flex" action={{url_for('list_update', item=list.id)}}>
+                    <div class="form-group w-100 pt-3">
+                        <input type="text" name="list_item" class="form-control" required>
+                    </div>
+                    <button type="submit" class="mx-3 my-3 btn btn-success form-group">Create</button>
+                </form> -->
+                {% endif %}
             </div>
         </div>
     {% endfor %}
